--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "betsol-ng-intl-tel-input",
+  "name": "ng-intl-tel-input",
   "description": "intl-tel-input integration for Angular.js",
-  "version": "1.3.2",
-  "main": "dist/scripts/betsol-ng-intl-tel-input.js",
+  "version": "1.4.0",
+  "main": "dist/scripts/ng-intl-tel-input.js",
   "ignore": [
     "src",
     "test",
@@ -17,10 +17,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/betsol/ng-intl-tel-input.git"
+    "url": "git://github.com/simonnilsson/ng-intl-tel-input.git"
   },
   "keywords": [
-    "betsol",
     "angular",
     "angular.js",
     "intl-tel-input",
