--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "betsol-ng-intl-tel-input",
+  "name": "ng-intl-tel-input",
   "description": "intl-tel-input integration for Angular.js",
-  "version": "1.3.2",
-  "homepage": "https://github.com/betsol/ng-intl-tel-input",
+  "version": "1.4.0",
+  "homepage": "https://github.com/simonnilsson/ng-intl-tel-input",
   "license": "MIT",
   "main": "index.js",
   "dependencies": {
@@ -36,10 +36,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/betsol/ng-intl-tel-input.git"
+    "url": "git://github.com/simonnilsson/ng-intl-tel-input.git"
   },
   "keywords": [
-    "betsol",
     "angular",
     "angular.js",
     "intl-tel-input",
